# diskwatcher.py

./: .gitignore  AGENTS.md  README.md  agents.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: dev_log.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_catalog.py  0002_volume_and_file_metadata.py  0003_volume_mount_metadata.py  0004_jobs_table.py  0005_volume_label_index.py  0006_dashboard_summary_indexes.py
scripts/: new_revision.py
src/diskwatcher/core/: cli.py  inspector.py  manager.py  watcher.py
src/diskwatcher/db/: __init__.py  connection.py  events.py  init_db.py  jobs.py  migration.py
src/diskwatcher/sql/: schema.sql
src/diskwatcher/utils/: config.py  devices.py  labels.py  logging.py
src/diskwatcher/web/: __init__.py  server.py
src/diskwatcher/web/templates/: status.html
tests/: conftest.py  test_cli.py  test_connection.py  test_db.py  test_devices.py  test_diskwatcher.py  test_inspector.py  test_jobs.py  test_logging.py  test_migration.py  test_web.py
tests/integration/: test_end_to_end.py
tests/test_out/: README.md
