[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diskwatcher"
version = "0.1.0"
description = "A Python package for monitoring disk activity."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "watchdog",
    "alembic>=1.13",
    "typer>=0.12",
    "flask>=2.3",
]
requires-python = ">=3.8"

[project.scripts]
diskwatcher = "diskwatcher.core.cli:entrypoint"


[tool.setuptools]
packages = [
    "diskwatcher",
    "diskwatcher.core",
    "diskwatcher.utils",
    "diskwatcher.db",
    "diskwatcher.web",
]
package-dir = { "" = "src" }

[tool.pyright]
include = ["src"]
exclude = ["tests", "**/__pycache__"]
strict = false
# pythonVersion = "3.8"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88
